--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,14 +13,23 @@ composeMultiplatform = "1.9.1"
 junit = "4.13.2"
 kotlin = "2.2.20"
 
+mlKit = "17.2.0"
 sqldelight = "2.1.0"
 json = "1.3.0"
 ktor= "2.3.5"
 koin = "3.5.3"
 dateTime= "0.6.0"
+camera = "1.4.2"
 
 
 [libraries]
+
+androidx-camera-view = { module = "androidx.camera:camera-view", version.ref = "camera" }
+androidx-camera-lifecycle = { module = "androidx.camera:camera-lifecycle", version.ref = "camera" }
+androidx-camera-camera2 = { module = "androidx.camera:camera-camera2", version.ref = "camera" }
+androidx-camera-core = { module = "androidx.camera:camera-core", version.ref = "camera" }
+androidx-camera-mlkit-vision = { module = "androidx.camera:camera-mlkit-vision", version.ref = "camera" }
+google-mlkit = { module = "com.google.mlkit:barcode-scanning", version.ref = "mlKit" }
 
 sqldelight-runtime = { module = "app.cash.sqldelight:runtime", version.ref = "sqldelight" }
 sqldelight-coroutines = { module = "app.cash.sqldelight:coroutines-extensions", version.ref = "sqldelight" }
